--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <section class="home">
         <div class="informacoes">
             <h1>Olá! Sou Alexandre Cavalcante</h1>
-            <p>Um desenvolverdor Front-end, Banck-end e JavaScript e apaixonado por tecnologia.</p>
+            <p>Um desenvolverdor Front-end apaixonado por tecnologia.</p>
             <p>Estou sempre me desafiando com novos projetos e buscando feedback na comunidade de programação, além de compartilhar meus conhecimentos. 😁</p>
             <p>Ah, também sou fã de jogos, filmes, séries. 💜</p>
 
